Refactor MaterialService to improve search logic and enhance readability